--- a/index.html
+++ b/index.html
@@ -26,6 +26,11 @@
             <ul>
                 <li><img src="images/enemy-bug.png" alt="Bug" style="width:20px;height:34px;">: you lose one life!</li>
                 <li><img src="images/Rock.png" alt="Rock" style="width:20px;height:34px;">: you lose one life!</li>
+            </ul><br>
+            <h2>Game control:</h2>
+            <ul>
+                <li><img src="images/vector-arrows-buttons.jpg" alt="arrow-buttons"> </li>
+                <li>Use your arrow-buttons <br> to control your player</li>
             </ul>
         </div>
         <div id="timer"></div>
